--- a/DirectlyApplyTest_Alexandra/JobFormatter/src/app/format-job/format-job.component.html
+++ b/DirectlyApplyTest_Alexandra/JobFormatter/src/app/format-job/format-job.component.html
@@ -1,4 +1,4 @@
-
+<h3 *ngIf="warning === true" style="text-align: center; color:red; font-family: Gill Sans, sans-serif;">Please fill in all fields.</h3>
 <div class="inputContainer">
     <form>
         <div class="form-group" style="padding-left: 20px; padding-top: 20px;">
